# dcdf

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
dcdf/: Cargo.toml
dcdf-ipfs/: Cargo.toml
dcdf-ipfs/src/: lib.rs
dcdf/src/: bitmap.rs  block.rs  build.rs  cache.rs  cache_async.rs  chunk.rs  dac.rs  dataset.rs  errors.rs  extio.rs  fixed.rs  geom.rs  helpers.rs  lib.rs  links.rs  log.rs  mapper.rs  mmarray.rs  mmbuffer.rs  mmstruct.rs  node.rs  range.rs  resolver.rs  simple.rs  snapshot.rs  span.rs  superchunk.rs  testing.rs  time.rs
dcdf/src/codec/: bitmap.rs  block.rs  chunk.rs  dac.rs  dacs.rs  log.rs  mod.rs  snapshot.rs  testing.rs  tests.rs
dcdf/src/dag/: commit.rs  folder.rs  links.rs  mapper.rs  mmarray.rs  mmbuffer.rs  mmstruct.rs  mod.rs  node.rs  old_superchunk.rs  range.rs  resolver.rs  span.rs  superchunk.rs  testing.rs
examples/: dclimate.py  encode_cpc_precip.py  example.py  load.py
examples/dag/: .gitignore  cli.py  compare.py  compare_lib.py  cpc_precip.py  dataset.py  dclimate.py  whatonearth
examples/simple/: encode_cpc_precip.py  load.py
py-dcdf/: Cargo.toml  pyproject.toml  tests.py
py-dcdf/dcdf/: __init__.py  interfaces.py
py-dcdf/src/: dag.rs  helpers.rs  lib.rs  simple.rs
py-dcdf/tests/: test_codec.py  test_dag.py  test_dcdf.py  test_scaffolding.py  test_simple.py  testdata.txt
src/codec/: mod.rs  tests.rs
