[package]
name = "dcdf-ipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dcdf = { path = "../dcdf"}
bytes = "1.2"
cid = "0.8"
futures = "0.3"
ipfs-api-backend-hyper = { git = "https://github.com/ferristseng/rust-ipfs-api.git", branch = "master" }
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
ndarray = "0.15"
