[package]
name = "dcdf-ipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dcdf = { path = "../dcdf"}
async-trait = "0.1"
bytes = "1.2"
cid = "0.10"
futures = "0.3"
reqwest = { version = "0.11", features=["multipart", "json", "stream"] }
serde = { version = "1.0", features=["derive"] }

[dev-dependencies]
ndarray = "0.15"
num-traits = "0.2"
tokio = { version = "1.24", features=["macros", "rt", "time"] }

