[package]
name = "dcdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
cid = "0.8"
futures = "0.3"
num-traits = "0.2"
ndarray = "0.15"
parking_lot = "0.12"

[dev-dependencies]
multibase = "0.9"
multihash = "0.16"
paste = "1.0"
rand = "0.8"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
tempfile = "3.3"
tokio = { version = "1.24", features=["rt", "macros"] }
