[package]
name = "dcdf"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0"
async-trait = "0.1"
cid = "0.10"
futures = "0.3"
num-traits = "0.2"
ndarray = "0.15"
parking_lot = "0.12"
paste = "1.0"
unsigned-varint = { version = "0.7", features=["futures"] }

[dev-dependencies]
multibase = "0.9"
multihash = "0.16"
rand = "0.8"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
tempfile = "3.3"
tokio = { version = "1.24", features=["macros", "rt", "time"] }
