[package]
name = "py-dcdf"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "dcdf._dcdf"  # Where in the Python package to put the Rust code

[lib]
name = "dcdf"   # Python package name
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.1", features = ["extension-module"] }
numpy = "0.16"
dcdf = { path = "../dcdf"}
