[package]
name = "py-dcdf"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "dcdf._dcdf"  # Where in the Python package to put the Rust code

[lib]
name = "py_dcdf"
crate-type = ["cdylib"]

[dependencies]
cid = "0.8"
dcdf = { path = "../dcdf" }
dcdf-ipfs = { path = "../dcdf-ipfs" }
ndarray = "0.15"
numpy = "0.16"
pyo3 = { version = "0.16", features = ["extension-module"] }
pyo3-file = "0.5"
