[package]
name = "py-dcdf"
version = "0.2.0"
edition = "2021"

[package.metadata.maturin]
name = "dcdf._dcdf"  # Where in the Python package to put the Rust code

[lib]
name = "py_dcdf"
crate-type = ["cdylib"]

[dependencies]
cid = "0.10"
dcdf = { path = "../dcdf" }
dcdf-ipfs = { path = "../dcdf-ipfs" }
ndarray = "0.15"
numpy = "0.18"
pyo3 = { version = "0.18", features = ["extension-module"] }
tokio = { version = "1.24", features=["rt", "rt-multi-thread"] }
