[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "dcdf"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
examples = [
    "docopt",
    "netCDF4",
    "requests",
    "xarray",
]
